# cancrizans-prototype

./: .coveragerc  .dockerignore  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  CHANGELOG.md  CI_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  FUTURE_PHASES.md  FUTURE_PHASES_14_18.md  GALLERY.md  LICENSE  MICROTONAL_FEATURES_SUMMARY.md  PROJECT_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  codecov.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  auto-assign.yml  cspell.json  dependabot.yml  labeler.yml  labels.yml  markdown-link-check-config.json  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: api-compatibility.yml  api-docs-publish.yml  artifact-management.yml  auto-merge.yml  badge-generator.yml  benchmark-regression.yml  benchmark.yml  breaking-change-detection.yml  cache-management.yml  cache-optimization.yml  changelog.yml  ci.yml  cleanup.yml  code-metrics.yml  code-quality.yml  codeql.yml  commit-lint.yml  comprehensive-test-matrix.yml  container-security.yml  contributors.yml  coverage-check.yml  cross-platform-validation.yml  dependency-review.yml  deployment-readiness.yml  docker.yml  docs-check.yml  docs-deploy.yml  documentation-validation.yml  (+30 more)
benchmarks/: README.md  __init__.py  benchmark_suite.py
cancrizans/: __init__.py  __main__.py  audio.py  bach_crab.py  cache.py  canon.py  cli.py  generator.py  io.py  microtonal.py  microtonal_utils.py  ml.py  pattern.py  performance.py  research.py  spectral.py  transformation_chain.py  validator.py  viz.py
data/: bach_crab_canon_real.musicxml  crab_canon.musicxml
docs/: API_REFERENCE.md  CLI_REFERENCE.md  FEATURE_MATRIX.md  LESSON_PLANS.md  QUIZ_BANK.md  README.md  TUTORIAL_GUIDE.md
examples/: 03_melody_crab_canon.musicxml  06_augmentation_canon.musicxml  07_diminution_canon.musicxml  08_mirror_canon.musicxml  10_triple_canon.musicxml  README.md  bach_analysis.json  bach_crab_canon.musicxml  cli_demo.xml  microtonal_examples.py  synthesized_crab.musicxml
notebooks/: bach_crab_canon_exploration.ipynb  generator_tutorial.ipynb  microtonal_canon_tutorial.ipynb  pattern_analysis_tutorial.ipynb  quick_start.ipynb  symmetry_analysis.ipynb  transformation_techniques.ipynb  waveform_palindrome.ipynb
scripts/: analyze_real_midi.py  benchmark.py  create_additional_examples.py  create_canon_examples.py  demonstrate_analysis.py  extract_midi_to_js.py  fix_notebook_analysis.py  fix_notebooks.py  generate_api_docs.py  generate_cli_reference.py  generate_docs.py  generate_educational_docs.py  generate_examples.py  generate_gallery.py  generate_missing_visualizations.py  parse_test_results.py  run_notebooks.py  update_notebook_cells.py
tests/: __init__.py  test_audio.py  test_cache.py  test_canon.py  test_cli_commands.py  test_cli_integration.py  test_generator.py  test_io.py  test_microtonal.py  test_microtonal_canon_integration.py  test_microtonal_utils.py  test_ml.py  test_pattern.py  test_performance.py  test_phase_music.py  test_research.py  test_spectral.py  test_transformation_chain.py  test_validator.py  test_viz.py
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml
(+28 files in other folders)
