[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cancrizans"
version = "0.39.0"
description = "Explore and render J.S. Bach's Crab Canon as a strict palindrome"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Cancrizans Project"},
]
dependencies = [
    "music21>=9.1.0",
    "mido>=1.3.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "pillow>=10.0.0",
]
audio = [
    "midi2audio>=0.1.1",
]

[project.scripts]
cancrizans = "cancrizans.cli:main"

[tool.setuptools.packages.find]
include = ["cancrizans*"]
exclude = ["web*", "data*", "out*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
# Python version
target-version = "py311"

# Line length
line-length = 100

# Exclude directories
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "venv",
    ".venv",
    "out",
    "data",
    "web",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and pydocstyle (D)
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "B008",   # function-calls-in-default-arguments
    "B905",   # zip-without-explicit-strict
    "B007",   # unused-loop-control-variable
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]  # Don't require docstrings in tests
"__init__.py" = ["F401", "F403"]  # Allow unused imports in __init__ files

[tool.ruff.lint.isort]
known-first-party = ["cancrizans"]

[tool.ruff.lint.pydocstyle]
convention = "google"
